# ride

./: .env  Dockerfile  TELEGRAM_SENDER_USAGE.md  celerybeat-schedule.db  configuration.py  db.sqlite3  db1_backup.dump  docker-compose.yml  dump.rdb  pyproject.toml  req.txt  requirements.txt  s.py  sms.py
.github/workflows/: deploy.yml
analytics/: admin.py  forms.py  tasks.py  telegram_sender.py  tests.py
bot_app/: admin.py  apps.py  models.py  urls.py
bot_app/filters/: driver_filter.py  order_filters.py  passenger_post_filter.py  passenger_travel_filter.py
bot_app/migrations/: 0001_initial.py  0002_alter_botclient_options_passengerpost_commit_and_more.py  0002_alter_order_status_passengerreject.py  0002_alter_passengertravel_from_location_and_more.py  0002_rename_joined_at_botclient_created_at_and_more.py  0002_rename_route_id_driver_route.py  0003_alter_passengerpost_start_time_and_more.py  0003_passengertravel.py  0003_passengertravel_driver_alter_passengerpost_status_and_more.py  0003_remove_passengertodriverreview_driver.py  0003_rename_route_driver_route_id_remove_car_car_class.py  0004_car_car_class.py  0004_passengerpost.py  0004_passengertodriverreview_uniq_review_per_order_per_passenger.py  0004_tariff_alter_cityprice_options_remove_cityprice_city_and_more.py  0005_alter_passengerpost_comment_and_more.py  0005_alter_route_options_alter_tariff_options_and_more.py  0005_driver_alter_botclient_options_and_more.py  0005_remove_passengerpost_status_and_more.py  0006_alter_passengerpost_from_location_and_more.py  (+42 more)
config/: celery.py  settings.py  urls.py
(+40 files in other folders)
